tests/machine/x/ocaml/json_builtin.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenjson_builtin2249954924/001/json_builtin.ml", line 7, characters 2-6:
7 |   json m;
      ^^^^
Error: Unbound value json
