tests/machine/x/ocaml/json_builtin.ml
(* Generated by Mochi compiler v0.10.25 on 2025-07-13T05:30:35Z *)
type record1 = { mutable a : int; mutable b : int }

let m : record1 = { a = 1; b = 2 }

let () =
  json m;
